PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_5-68_expression_arithm/gcc-compile.txt
input.c: In function ‘main’:
input.c:7:5: error: ‘e’ undeclared (first use in this function)
    7 |     e = 2;
      |     ^
input.c:7:5: note: each undeclared identifier is reported only once for each function it appears in

return code: 1
